tests/ui/rfcs/rfc-3348-c-string-literals/gate.stderr
error[E0658]: `c".."` literals are experimental
  --> $DIR/gate.rs:10:5
   |
LL |     c"foo";
   |     ^^^^^^
   |
   = note: see issue #105723 <https://github.com/rust-lang/rust/issues/105723> for more information
   = help: add `#![feature(c_str_literals)]` to the crate attributes to enable

error[E0658]: `c".."` literals are experimental
  --> $DIR/gate.rs:13:8
   |
LL |     m!(c"test");
   |        ^^^^^^^
   |
   = note: see issue #105723 <https://github.com/rust-lang/rust/issues/105723> for more information
   = help: add `#![feature(c_str_literals)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
